--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,10 +2,12 @@
 parts = openerp
 versions = versions
 extensions += gp.vcsdevelop
-vcs-extend-develop = git+https://github.com/anybox/anybox.recipe.odoo@e37e0ac527de58abe6e913e4eff670d2f8d72c9a#egg=a.r.odoo
+vcs-extend-develop = git+https://github.com/anybox/anybox.recipe.odoo#egg=a.r.odoo
+#git+https://github.com/anybox/anybox.recipe.odoo@e37e0ac527de58abe6e913e4eff670d2f8d72c9a#egg=a.r.odoo
 vcs-update=True
 index = https://pypi.python.org/simple
 find-links = https://github.com/erocarrera/pydot/archive/pydot-1.0.28.zip
+include-site-packages = false
 
 [openerp]
 recipe = anybox.recipe.odoo:server
@@ -31,6 +33,7 @@ addons = git https://github.com/OCA/account-invoicing parts/account-invoicing 8.
 eggs = nose
        unidecode
        Pillow
+       urllib3
        requests
        slugify
        cerberus
@@ -48,3 +51,5 @@ eggs = nose
 [versions]
 pillow = 3.4.2
 fs = 0.5.5a1
+urllib3 = 1.21.1
+setuptools = 33.1.1
