--- a/local-template.cfg
+++ b/local-template.cfg
@@ -6,9 +6,10 @@ extends = buildout.cfg
 
 [openerp]
 options.admin_passwd = admin
-options.db_user = odoo
-options.db_name=db
-options.data_dir=/workspace/.filestore
-with_devtools = true
+options.db_user = odoo8
+options.db_name = shopinvader
+options.dbfilter = ^shopinvader.*$
+options.data_dir = .filestore
+#with_devtools = true
 
 eggs += pyinotify
