--- a/odoo/requirements.txt
+++ b/odoo/requirements.txt
@@ -1,3 +1,7 @@
 git+https://github.com/akretion/locomotivecms-python-client@master#egg=locomotivecms
 git+https://github.com/cheah/adyen-cse-python@master#egg=adyen-cse-python
 stripe==2.0.3
+python-magic
+vcrpy==2.0.1
+requests==2.21.0
+Adyen==2.0.0
