update Jessie repository https://unix.stackexchange.com/a/508728

--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -1,5 +1,8 @@
 FROM camptocamp/odoo-project:10.0-3.1.1-batteries
 
+RUN echo "deb [check-valid-until=no] http://archive.debian.org/debian jessie-backports main" > /etc/apt/sources.list.d/jessie-backports.list \
+    && sed -i '/deb http:\/\/deb.debian.org\/debian jessie-updates main/d' /etc/apt/sources.list \
+    && echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf;
 RUN apt-get update \
     && apt-get install -y --no-install-recommends vim wget git
 
