--- a/odoo/spec.yaml
+++ b/odoo/spec.yaml
@@ -1,77 +1,84 @@
 odoo:
   remotes:
-    origin: https://github.com/OCA/ocb
+    origin: https://github.com/OCA/OCB
+    acsone: https://github.com/acsone/odoo
   merges:
     - origin 12.0
 
-#account-reconcile:
-#    modules: []
-#    src: https://github.com/OCA/account-reconcile 10.0
-#
-#bank-payment:
-#    modules: []
-#    src: https://github.com/OCA/bank-payment 10.0
-#
-#crm:
-#    modules: []
-#    src: https://github.com/OCA/crm 10.0
-#
-#delivery-carrier:
-#    modules: []
-#    src: https://github.com/OCA/delivery-carrier 10.0
-#
-#e-commerce:
-#    modules: []
-#    src: https://github.com/OCA/e-commerce 10.0
-#
-#product-brand:
-#    modules: []
-#    src: https://github.com/OCA/product-attribute 10.0
-#
-#product-variant:
-#    modules: []
-#    src: https://github.com/OCA/product-variant 10.0
-#
+account-reconcile:
+    modules: []
+    src: https://github.com/OCA/account-reconcile 12.0
+
+bank-payment:
+    modules: []
+    src: https://github.com/OCA/bank-payment 12.0
+
+crm:
+    modules: []
+    src: https://github.com/OCA/crm 12.0
+
+delivery-carrier:
+    modules: []
+    src: https://github.com/OCA/delivery-carrier 12.0
+
+e-commerce:
+    modules: []
+    src: https://github.com/OCA/e-commerce 12.0
+
+product-brand:
+    modules: []
+    src: https://github.com/OCA/product-attribute 12.0
+
+product-variant:
+    modules: []
+    src: https://github.com/OCA/product-variant 12.0
+
 queue:
-    modules: [queue_job]
+    modules: []
     src: https://github.com/OCA/queue 12.0
 
 sale-workflow:
-    modules: [sale_automatic_workflow]
-    src: https://github.com/odoonz/sale-workflow 12.0-mig-sale_automatic_workflow
+    modules: []
+    src: https://github.com/OCA/sale-workflow 12.0
 
 rest-framework:
     modules: []
-    src: https://github.com/oca/rest-framework 10.0
-
-ak-odoo-incubator:
-    modules: [base_sparse_field_list_support, base_jsonify]
-    src: https://github.com/akretion/ak-odoo-incubator 10.0
+    src: https://github.com/OCA/rest-framework 12.0
 
 server-auth:
     modules: [auth_api_key]
-    src: https://github.com/OCA/server-auth 10.0
+    src: https://github.com/OCA/server-auth 12.0
 
-connector-search-engine:
+ak-odoo-incubator:
     modules: []
-    src: https://github.com/akretion/connector-search-engine 10.0
+    src: https://github.com/akretion/ak-odoo-incubator 12.0
 
-odoo-shopinvader:
-    modules: [base_url]
-    src: https://github.com/akretion/odoo-shopinvader 10.0
-
-payment-gateway:
+search-engine:
     modules: []
-    src: https://github.com/akretion/payment-gateway 10.0
+    src: https://github.com/OCA/search-engine 12.0
+
+#odoo-shopinvader:
+#  remotes:
+#    origin: https://github.com/akretion/odoo-shopinvader
+#    acsone: https://github.com/acsone/odoo-shopinvader
+#  merges:
+#   - origin 12.0
+
+#payment-gateway:
+#    modules: []
+#    src: https://github.com/akretion/payment-gateway 12.0
 
 server-tools:
-    modules: [onchange_helper, keychain]
-    src: https://github.com/oca/server-tools 10.0
-
-storage:
     modules: []
-    src: https://github.com/akretion/storage 10.0
+    src: https://github.com/OCA/server-tools 12.0
+
+#storage:
+#    modules: []
+#    src: https://github.com/akretion/storage 12.0
 
 connector:
-    modules: [component, component_event, connector]
-    src: https://github.com/guewen/connector 12.0-migrate-connector
+    modules: []
+    src: https://github.com/OCA/connector 12.0
+web:
+    modules: []
+    src: https://github.com/OCA/web 12.0
