[FIX] update branch and dependency

--- a/odoo/requirements.txt
+++ b/odoo/requirements.txt
@@ -7,3 +7,7 @@ requests==2.21.0
 Adyen==2.0.0
 elasticsearch
 vcrpy-unittest
+# vcrp is not yet compatible with the change done in boto3
+# https://github.com/kevin1024/vcrpy/issues/382
+# for now we freeze the boto3 version
+boto3==1.7.84
