--- a/odoo/spec.yaml
+++ b/odoo/spec.yaml
@@ -40,7 +40,7 @@ queue:
 
 sale-workflow:
     modules: []
-    src: https://github.com/OCA/sale-workflow 10.0
+    src: https://github.com/acsone/sale-workflow 10.0-sale_promotion_rule_discount_amount-lmi
 
 rest-framework:
     modules: []
@@ -61,11 +61,9 @@ search-engine:
 odoo-shopinvader:
   remotes:
     origin: https://github.com/akretion/odoo-shopinvader
-    acsone: https://github.com/acsone/odoo-shopinvader
   merges:
     - origin 10.0
-    - origin 10.0-remove-useless-name
-    - acsone 10.0-unbind_url-lmi
+    - origin 10.0-fix-auth
 
 payment-gateway:
     modules: []
