--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -12,7 +12,7 @@ migration:
           - shopinvader_payment_paypal
           - shopinvader_payment_stripe
           - shopinvader_locomotive_payment_adyen
-          - shopinvader_algolia
+          - shopinvader_elasticsearch
           - shopinvader_product_stock_state
           - shopinvader_product_template_multi_link
           - shopinvader_promotion_rule
@@ -26,3 +26,4 @@ migration:
           - anthem songs.install.payment::setup
           - anthem songs.install.shopinvader::setup
           - anthem songs.install.base::setup
+          - anthem songs.install.elastic::setup
